# mcp-url-fetch

./: .gitignore  README.md  claude_desktop_config.json  direct_test.py  pyproject.toml  url_fetcher.py
examples/: README.md  interactive_client.py  quick_test.py  simple_usage.py  test_fetch.py
scripts/: install_desktop.py
src/url_fetch_mcp/: __init__.py  __main__.py  cli.py  fetch.py  main.py  utils.py
